# sdk-rust

./: CHANGELOG.md  Cargo.toml  README.md
docs/: AccountApi.md  ActivateFreeDns.md  ActivateFreeDnsResponse.md  ActivityLogEntry.md  ActivityLogResponse.md  AddServerResponse.md  Address.md  ApiCredential.md  ApiTokenCreate.md  ApiTokenList.md  AttachIpv4.md  AttachIpv4Response.md  AttachIpv6.md  AttachVolume.md  AuthApi.md  BillingApi.md  Bucket.md  CancelServiceResponse.md  ChangeBillingCycle.md  ChangeBillingCycleResponse.md  ChangeCompany.md  ChangeCompanyResponse.md  ChangePassword.md  CheckAvailability.md  CliSessionCreateResponse.md  CliSessionPollResponse.md  CliSessionPollResponseStatusEnum.md  CloudApi.md  ClusterAdd.md  ClusterAddResponse.md  ClusterDetail.md  ClusterPackage.md  ClusterType.md  ClusterTypeEnum.md  Company.md  ConnectVmRequest.md  ConnectVmResponse.md  ConnectedVm.md  ConnectedVmsResponse.md  ConsoleToken.md  (+221 more)
src/: client.rs  lib.rs
src/apis/: account_api.rs  auth_api.rs  billing_api.rs  cloud_api.rs  configuration.rs  dedicated_api.rs  domain_api.rs  email_api.rs  freedns_api.rs  hosting_api.rs  kubernetes_api.rs  mod.rs  schema_api.rs  support_api.rs
src/models/: activate_free_dns.rs  activate_free_dns_response.rs  activity_log_entry.rs  activity_log_response.rs  add_server_response.rs  address.rs  api_credential.rs  api_token_create.rs  api_token_list.rs  attach_ipv4.rs  attach_ipv4_response.rs  attach_ipv6.rs  attach_volume.rs  bucket.rs  cancel_service_response.rs  change_billing_cycle.rs  change_billing_cycle_response.rs  cluster_add.rs  (+233 more)
